              than once when more than one foreign key to the parent existed.    

Graph Plugin: Referesh didn't work for newly created constraints

Fixed several bugs which made it impossible to work with SQLite.

Updated Italian translation (Ivo Neri)

Fixed a bug which made it difficult to see text that was being edited in a table.

2049336: Make Editable disappear from SQL/results tab

2018512: DB2 timestamps still don't work when milliseconds are zero. Patch submitted by Daniel Stränger.

2018018: (Bug in FormatSql function) Formatter now uses platform-specific EOL char sequence.  

2013346: export csv with option "carriage return + linefeed"

1958881: (Unable to see source of database views)  Adjusted the query for view source to use 
underlying system tables instead of INFORMATION_SCHEMA.VIEWS, since this view cannot handle views 
that are greater than 4000 characters.

1968807: Unsigned INT problem with IMPORT FILE functionality

1968270: Displaying unsigned INT as signed INT in column

1845987: PostgreSQL interval types are not displayed

1840266: Create Table Script sets varchar columns to 8000

1830649: Focus Loss

1824534: Constraint created twice

1902611: (Oracle) Don't fail on SQL-Plus "SET ..." commands in SQL script; Now, the Oracle plugin skips over 
                  them. 

1876352: (DB2) Incorrect  TIMESTAMP in create data script (loss of precision - nanosecond component - also 
               affected other databases.

1861402: (Informix catalog switching doesn't work correctly) 
 - Better catalog switching behavior for databases that support catalogs.  Now if a connection is made 
   without specifying the catalog, a place-holder
   catalog ("None") is inserted into the catalog drop-down menu and removed once a catalog is selected.  
 - Fixed a race condition that caused the tree to be refreshed before data was refreshed from the database 
   when the catalog was switched.  